# Actix-Web-Template

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-06-04-123707_login_register/: up.sql
src/: main.rs  schema.rs
src/app/: mod.rs
src/app/dashboard/: urls.rs  views.rs
src/app/login/: forms.rs  urls.rs  views.rs
src/app/register/: forms.rs  urls.rs  views.rs
src/database/: db.rs  errors.rs
src/models/: users.rs
src/utils/: argon2.rs  macros.rs  mod.rs  render.rs
static/css/: base.css  dashboard.css  login_register.css
static/templates/base/: base.html
static/templates/dashboard/: dashboard.html
static/templates/login/: login.html
static/templates/register/: register.html
